--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Nosotros, Multimedios, Emprendimiento">
     <title>Eure-k Diseño Multimedial</title>
-    <link rel="icon" href="./img/logo4.ico" />
+    <link rel="icon" href="../img/logo4.ico" />
     <script src="https://kit.fontawesome.com/67efa75ecc.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
