--- a/views/servicios.html
+++ b/views/servicios.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Diseño Multimedial Personalizado">
     <meta name="keywords" content="Servicios, Personalizado, Edicion, Video">
     <title>Eure-k Diseño Multimedial</title>
-    <link rel="icon" href="./img/logo4.ico" />
+    <link rel="icon" href="../img/logo4.ico" />
     <script src="https://kit.fontawesome.com/67efa75ecc.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
