--- a/views/servicios.html
+++ b/views/servicios.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Header -->
     <header class="container-fluid fixed-top rounded">
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-dark navbar-expand-lg">
             <div class="container-fluid">
                 <a href="../index.html" class="logo"><img src="../img/logoico.ico" class="agitar" width="160" height="130"
                         alt="logo"></a>
